--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/main.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -24,6 +25,8 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+
   </head>
 
   <body>
@@ -59,17 +62,6 @@
       </form>
     </section>
     <main class="container" id="tweeter-tweets">
-      <article class="el-tweeto">
-        <h1>Recent Tweets</h1>
-        </article>
-        <article class="tweet1">
-          <h2>Count Dracula</h2>
-          <p>Looking for good allium-free recipes, please suggest! #cooking</p>
-        </article>
-        <article class="tweet2">
-          <h2>Frankenstein's Monster</h2>
-          <p>Every English professor asks 'who is Frankenstein's Monster?' but never 'How is Frankenstein's Monster?'</p> 
-        </article>
     </main>
   </body>
 </html>
