--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,9 @@
         </div>
       </form>
     </section>
-    <main class="container" id="tweeter-tweets">
+    <section class="container" id="tweeter-tweets">
+            <!-- jquery where art thou -->
+    </section>
     </main>
   </body>
 </html>
