--- a/public/index.html
+++ b/public/index.html
@@ -55,14 +55,14 @@
         <section class="new-tweet-form">
         <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         <div class="send-tweet">
-          <button class="button" type="submit">Tweet</button>
+          <button id="post-tweet" type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </section>
         </div>
       </form>
     </section>
     <section class="container" id="tweeter-tweets">
-            <!-- jquery where art thou -->
+      
     </section>
     </main>
   </body>
