--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/main.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -32,24 +32,22 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span><b>Tweeter</b></span>
-      <span><a href="#tweet"><b>Write</b></a> a new tweet</span>
+      <span class="website-title"><b>Tweeter</b><span class="subtitle">Where everyone is guaranteed to be a bird</span></span>
+      <span class="write-a-new-tweet"><a href="#tweet"><b>Write</b></a> a new tweet</span>
     </nav>
     <div>
     <header>
       <div class="tweetererAvatar">
-          <img src="/images/profile-hex.png"> 
-      </div>
-      <div class="tweetererName">
-          <h2>Cabbage</h2>
       </div>
   </header>
   </div>
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
-    <p>Last night I dreamt I went to Manderley again. It seemed to me I stood by the iron gate leading to the drive, and for a while I could not enter, for the way was barred to me. There was a padlock and a chain upon the gate. I called in my dream to the lodge-keeper, and had no answer, and peering closer through the rusted spokes of the gate I saw that the lodge was uninhabited. No smoke came from the chimney, and the little lattice windows gaped forlorn. Then, like all dreamers, I was possessed of a sudden with supernatural powers and passed like a spirit through the barrier before me. 
-    </p>
+    
     <section class="new-tweet">
+      <div class="tweetererName">
+        Kitty Kestral
+    </div>
       <h2>Compose Tweet</h2>
       <form action="/tweets" method="POST">
         <section class="new-tweet-form">
