adjusted responsive display

--- a/public/index.html
+++ b/public/index.html
@@ -34,18 +34,19 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
-    <nav>
+    <nav class="nav">
       <span class="website-title"><b>Tweeter</b><span class="subtitle">Where everyone is guaranteed to be a bird</span></span>
       <span class="write-a-new-tweet"><a href="#tweet"><b>Write</b></a> a new tweet</span>
     </nav>
-    <div>
-    <header>
-      <div class="tweetererAvatar">
-      </div>
+  <div>
+  <wrap>
+  <header>
+    <div class="tweetererAvatar">
+    </div>
   </header>
   </div>
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container1"></main>
     
     <section class="new-tweet">
       <div class="tweetererName">
@@ -67,10 +68,11 @@
         </div>
       </form>
     </section>
-    <section class="container" id="tweeter-tweets">
-      
+    <section class="container2" id="tweeter-tweets">
     </section>
+
     </main>
+  </wrap>
   </body>
 </html>
 
